--- a/views/contact.html
+++ b/views/contact.html
@@ -95,7 +95,7 @@ class="hfeed site" id="page">
 					</div>
 				<div class="ast-builder-layout-element ast-flex site-header-focus-item ast-header-html-1" data-section="section-hb-html-1">
 			<div class="ast-header-html inner-link-style-"><div class="ast-builder-html-element"><p><span style="font-size: 18pt; color: #ffffff;"><strong>CLOUDCHAIN<br />
-TECHNOLOGIES</strong></span></p>
+TECHNOLOGIES, KNR</strong></span></p>
 </div></div>		</div>
 								</div>
 																									<div class="site-header-primary-section-right site-header-section ast-flex ast-grid-right-section">
