--- a/views/newadminpage.html
+++ b/views/newadminpage.html
@@ -24,7 +24,7 @@
 
     <style>
         body {
-            background-image: url('1.jpg');
+            background-image: url('/img/1.jpg');
             background-size: cover;
             background-repeat: no-repeat;
             background-attachment: fixed;
